--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,7 @@ dependencies {
 
     
     // image
-    
-
+    implementation("io.coil-kt:coil-compose:2.2.2")
 
     // navigation
     def nav_version = "2.5.3"
