fixed small bugs and added the love function and play music function (7/19)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,6 @@ dependencies {
 
 
     // exoplayer
+    def exoplayerVersion = "2.18.2"
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoplayerVersion}"
 }
